[label][classification] refactor: improve type safety and code organization
                         - Introduce UserContext record to encapsulate user display name and labels
                         - Change callLlm() to return Mono<LlmOutput> instead of Mono<String>
                         - Extract LLM classification logic into dedicated methods
                         - Move flag creation logic to LlmOutput.flagsToSet()

                     - Fix: Only add needs-action flag when action=true (supports label-only classification)